--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
 
 .title {
     text-align: center;
+    
 }
 
 .title h2{
@@ -123,3 +124,58 @@ nav{
     padding: 40px 0px;
 }
 /* Client part end */
+/* commountiy part start */
+
+.commountiy{
+    padding: 40px 0px;
+}
+
+.commountiy .title h2{
+    width: 542px;
+    margin: 0 auto;
+
+}
+.commountiy .card{
+  width: 100% !important;
+ padding-left: 42px;
+ padding-right: 42px;
+ padding-top: 24px;
+ padding-bottom: 48px;
+ text-align: center;
+ border: 0px !important;
+ -webkit-box-shadow: 0px 6px 4px -1px rgba(171,190,209,1);
+-moz-box-shadow: 0px 6px 4px -1px rgba(171,190,209,1);
+box-shadow: 0px 6px 4px -1px rgba(171,190,209,1);
+margin-top: 17px;
+
+
+}
+.commountiy .card img{
+  width: 20%;
+  margin: 0 auto;
+  
+
+}
+.commountiy .card .card-title{
+    font-size: 28px;
+    color: #4D4D4D;
+    font-weight: 900;
+    font-family: "Inter", sans-serif;
+    padding-top: 16px;
+    padding-bottom: 8px;
+
+}
+.commountiy .card .card-text{
+    font-size: 14px;
+    color: #717171;
+    font-weight: 400;
+    font-family: "Inter", sans-serif;
+
+}
+.commountiy .card .card-body{
+    padding: 0 !important;
+
+}
+
+
+/* commountiy part end */
