--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ nav{
 
 .commountiy{
     padding: 40px 0px;
+    
 }
 
 .commountiy .title h2{
@@ -179,3 +180,15 @@ margin-top: 17px;
 
 
 /* commountiy part end */
+/* serive part start */
+
+.service {
+    padding: 48px 0px;
+
+}
+
+.service .title2{
+    text-align: left;
+
+}
+/* serive part end */
