--- a/css/style.css
+++ b/css/style.css
@@ -245,3 +245,44 @@ margin-top: 17px;
 }
 
 /* deteils part end */
+/* customer part start */
+.customer{
+    padding: 32px 0px;
+    background: #F5F7FA;
+}
+.customer p{
+    font-size: 16px;
+    font-weight: 500;
+    color: #717171;
+    font-family: "Inter", sans-serif;
+    width: 748px;
+    
+}
+.customer h6{
+    font-size: 20px;
+    font-weight: 600;
+    color: #4CAF4F;
+    font-family: "Inter", sans-serif;
+    padding-top: 16px;
+    padding-bottom: 8px;
+    
+}
+.customer .slider{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
+    
+}
+.customer .slider h4{
+    font-size: 20px;
+    font-weight: 600;
+    color: #4CAF4F;
+    font-family: "Inter", sans-serif;
+    
+}
+.customer .slider h4 i{
+    margin-left: 8px;
+    
+    
+}
+/* customer part end */
